# Rust-Tonken

./: Cargo.toml  libemotion.rlib
.github/: dependabot.yml
.github/workflows/: fast-feedback.yml  full-validation.yml  release.yml
fixtures/: empty_content.ndjson  heartbeats.ndjson  large_response.ndjson  malformed.ndjson  no_message.ndjson  normal_response.ndjson  single_token.ndjson
src/: analysis.rs  app.rs  client.rs  content_analysis.rs  export.rs  lib.rs  main.rs  message.rs  metrics.rs  sparkline.rs  storage.rs  stream.rs  theme.rs  types.rs  views.rs
src/lexicons/: emotion.rs  formality.rs  mod.rs  sentiment.rs
src/screens/: analysis.rs  chat.rs  export.rs  history.rs  loading.rs  mod.rs  session_list.rs  settings.rs
tests/: analysis_tests.rs  app_tests.rs  client_tests.rs  export_tests.rs  history_tests.rs  metrics_tests.rs  sparkline_tests.rs  storage_tests.rs
tests/snapshots/: analysis_tests__stemming_snapshot.snap  export_tests__csv_output_snapshot.snap  metrics_tests__typical_metrics_snapshot.snap
