[package]
name = "ollama-scope"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rust-stemmers = "1.2"
csv = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = "1"
dirs = "5"

[dev-dependencies]
wiremock = "0.6"
axum = "0.7"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
approx = "0.5"
tempfile = "3"
tokio-test = "0.4"
